// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-child-comp 1`] = `
<Marking description="something" purpose="question">
  <span>Hi</span>
</Marking>;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "question",
    "location": {
      "line": 1
    }
  }
]
`;

exports[`with-child-func 1`] = `
<Marking description="something" purpose="question">
  {(props) => <span {...props}>Hi</span>}
</Marking>;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "question",
    "location": {
      "line": 1
    }
  }
]
`;

exports[`with-purpose-fixme 1`] = `
<Marking description="something" purpose="fixme" />;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "fixme",
    "location": {
      "line": 1
    }
  }
]
`;

exports[`with-purpose-question 1`] = `
<Marking description="something" purpose="question" />;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "question",
    "location": {
      "line": 1
    }
  }
]
`;

exports[`with-purpose-todo 1`] = `
<Marking description="something" purpose="todo" />;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "todo",
    "location": {
      "line": 1
    }
  }
]
`;

exports[`without-purpose 1`] = `
<Marking description="something" />;

      ↓ ↓ ↓ ↓ ↓ ↓

[
  {
    "description": "something",
    "purpose": "todo",
    "location": {
      "line": 1
    }
  }
]
`;
